refactor: 새 조회 로직 리팩토링